--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <ul id="upcoming">
                 <li><p>Programování v roce 2025: Do jakých jazyků má cenu věnovat čas a úsilí?</p></li>
                 <li><p>Jak 5G mění mobilní technologie: Rychlost, která spojuje svět</p></li>
-                <li><p>Budoucnost cloud computingu: Jak se vyvíjí a co nás čeká?</p></li>
+                <li><p>Budoucnost cloud computingu: Jak se vyvíjí a co nás čeká</p></li>
                 <li><p>Revoluce v práci: Jak AI mění pracovní prostředí a zaměstnání</p></li>
                 <li><p>Blockchain mimo kryptoměny: Inovace v logistice a financích</p></li>
                 <li><p>Nové možnosti ve virtuální a rozšířené realitě: Technologie, které nás vtáhnou do nového světa</p></li>
